<resources>
    <string name="app_name">명식이</string>

    <string name="home_today_tv">오늘의 학식 │  hv</string>
    <string name="home_time_tv">운영시간 │ 중식 11:30 ~14:00 │ 석식 17:30 ~19:00</string>
    <string name="home_time_life_tv">운영시간 │ 중식 11:30~13:30 | 석식 17:00 ~ 18:30</string>
    <string name="home_time_staff_tv">운영시간 │ 중식 11:30~13:30 | 석식 17:30 ~ 18:30</string>
    <string name="home_time_student_tv">운영시간 │ 조식 8:30~9:30 | 중식 10:00 ~ 15:00</string>
    <string name="home_time_myonog_tv">운영시간 │ 백반 11:30~14:30 샐러드,볶음밥 11:00 ~ 16:00</string>

    <string name="home_launch_time">중식 운영시간 11:30 ~14:00 </string>
    <string name="home_dinner_time">석식 운영시간 17:30 ~19:00</string>

    <string name="week_today_tv">주간 식단표</string>
    <string name="splash_help_select">캠퍼스 설정을 통해 \n 접속 시 선택한 캠퍼스 \n 학식 메뉴를 확인할 수 있습니다.</string>
    <string name="seoul_campus">인문캠퍼스</string>
    <string name="yongin_campus">자연캠퍼스</string>
    <string name="campus_setting">캠퍼스 설정</string>

    <string name="app_sub_title">명지대 학식 식단표 제공 앱</string>
    <string name="date_format">%s월 %s일</string>
    <string name="ranking_title_text">명지대학생들이 %d명 담았어요!</string>
    <string name="is_null_phone_number">전화번호가 없습니다.</string>
    <string name="please_install_naver_map">네이버 지도를 설치해주세요.</string>
    <string name="direct_go">바로 가기</string>

    <string name="home_today_food">오늘의 학식 │  </string>
    <string name="home_today_day">00월 00일</string>
    <string name="home_today_not_food_day">2022년 10월 4일 화요일</string>

    <string name="food_review_bt">학식에 대한 의견 남기기</string>

    <string name="love_not_restaurant">찜꽁리스트가 비어있어요!\n맛집을 찜꽁해 나만의 맛집 리스트를 만들어봐요!</string>

    <string name="search_empty_list">검색 결과가 없습니다.</string>
    <string name="search_restaurant_text">검색어를 입력하세요.</string>
    <string name="search_restaurant_list">#명지맛집 모음!</string>
    <string name="search_univ_rice">맛집</string>
    <string name="search_univ_cafe">카페</string>
    <string name="search_univ_drink">술집</string>
    <string name="search_univ_bread">빵집</string>
    <string name="search_already_food">#명지인이 선택한 맛집</string>

    <string name="select_teacher_restaurant">교직원 식당</string>
    <string name="select_teacher_restaurant_time">운영시간\n중식 11:30~13:30 | 석식 17:30 ~ 18:30</string>
    <string name="select_teacher_launch_time">중식 운영시간 11:30~13:30</string>
    <string name="select_teacher_dinner_time">석식 운영시간 17:30 ~ 18:30</string>

    <string name="select_room_restaurant">생활관 식당</string>
    <string name="select_room_restaurant_time">운영시간\n중식 11:30~13:30 | 석식 17:00 ~ 18:30</string>
    <string name="select_room_launch_time">중식 운영시간 11:30~13:30</string>
    <string name="select_room_dinner_time">석식 운영시간 17:30 ~ 18:30</string>

    <string name="select_student_restaurant">학관 식당</string>
    <string name="select_student_restaurant_time">운영시간\n조식 8:30~9:30 | 중식 10:00 ~ 15:00</string>
    <string name="select_student_breakfast_time">조식 운영시간 8:30~9:30</string>
    <string name="select_student_launch_time">중식 운영시간 10:00 ~ 15:00</string>


    <string name="select_new_restaurant">명진당</string>
    <string name="select_new_restaurant_time">운영시간\n백반 11:30~14:30 \n샐러드,볶음밥 11:00 ~ 16:00</string>
    <string name="select_new_rice_time">백반 운영시간 11:30~14:30</string>
    <string name="select_new_salad_time">샐러드,볶음밥 운영시간 11:00 ~ 16:00</string>

    <string name="select_student_mcc_restaurant">MCC식당</string>
    <string name="select_student_paul_restaurant">폴바셋</string>

    <string name="splash_myongji_title_text">명지대 학식 식단표 제공 앱</string>
    <string name="tag_myongji_good_food">#명지 맛집</string>

    <string name="no_dialog_text">아니요</string>
    <string name="yes_dialog_text">네</string>
    <string name="hello_dialog_text">안녕하세요</string>

    <string name="campus_dialog_title_text"> 캠퍼스 설정 안내 </string>
    <string name="campus_dialog_sub_title_text">최초로 설정된 캠퍼스는 이후 변경이 어려우니 신중하게 골라주세요!</string>
    <string name="campus_dialog_okay_text">확 인</string>

    <string name="food_list">베이컨김치볶음밥 후라이 맑은우동국물 피쉬앤칩스 케찹 단무지 배추김치</string>
    <string name="food_good_evaluation">맛있어요 </string>
    <string name="food_hate_evaluation">맛없어요 </string>

    <string name="restaurant_name">식당이름</string>
    <string name="restaurant_type">가게 종류</string>
    <string name="restaurant_distance">320m</string>
    <string name="restaurant_location">가게 위치</string>
    <string name="restaurant_phone">가게 전화번호</string>
    
    <string name="rank_sort_menu_popularity">인기순</string>
    <string name="rank_sort_menu_suggestion">추천순</string>
    <string name="rank_sort_menu_distance">거리순</string>

    <string name="user_area_s">교직원식당</string>
    <string name="user_area_l">생활관식당</string>
    <string name="user_area_h">학생식당</string>
    <string name="user_area_m">명진당식당</string>
    <string name="user_area_mcc">MCC식당</string>

    <string name="review_okay">완료</string>
    <string name="check_newtwork_state">네트워크 상태를 확인해주세요.</string>
    <string name="error">ERROR</string>

    <string name="back_button_warning">"'뒤로'버튼을 한번 더 누르시면 종료됩니다."</string>
    <string name="opinion_write">의견 작성</string>
    <string name="please_opinion_write">의견을 작성해주세요!</string>
    <string name="weekend_noti">주말 운영 안내</string>
    <string name="weekend_not_service">주말에는 식당을 운영하지 않습니다.</string>

    <string name="tag_good_restaurant">맛집</string>
    <string name="tag_good_cafe">카페</string>
    <string name="tag_good_drink">술집</string>
    <string name="tag_good_bread">빵집</string>

    <string name="campus_example_address">서울특별시 서대문구 거북골로 34</string>
    <string name="restaurant_example_category">음식점</string>
    <string name="restaurant_example_name">엄마손 떡볶이</string>
    <string name="restaurant_scrap">찜꽁</string>
    <string name="restaurant_example_scrap">20</string>

    <string name="widget_setting">위젯 설정</string>
    <string name="student_restaurant">학생회관</string>
    <string name="myongjin_restaurant">명진당</string>

    <string name="break_fast">조식</string>
    <string name="lunch_text">중식</string>
    <string name="lunch_a_text">중식A</string>
    <string name="lunch_b_text">중식B</string>
    <string name="dinner_text">석식</string>
    <string name="rice">백반</string>
    <string name="salad">샐러드</string>
    <string name="fried_rice">볶음밥</string>

    <string name="update_not_see">다시 보지 않기</string>
    <string name="battery_exception">배터리 최적화 허용</string>

    <string name="map_title">맛집 지도</string>
    <string name="map_text">명지대학교 학생들이 선택한 인증된 맛집을 \n지도로 한 눈에 확인할 수 있어요!</string>

    <string name="widget_title">위젯 설정</string>
    <string name="widget_text">앱을 접속하지 않고도 원하는 식당 한 곳을 \n설정하여 위젯으로 메뉴를 확인할 수 있어요!</string>
    <string name="battery_optimize_text">위젯으로 메뉴를 확인하려면 배터리최적화 허용을 해주셔야해요!</string>

    <string name="preference_key_see">업데이트 다이얼로그</string>
    <string name="battery_optimize_early">이미 배터리 최적화가 허용되어 있습니다.</string>

</resources>