<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clDialogBottomUpdateSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_draggable="true"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/vDialogBottom"
        android:layout_width="60dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:background="#e5e5e5"
        app:layout_constraintBottom_toTopOf="@+id/bottom_update_widget_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bottom_update_widget_iv"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/ic_widget"
        app:layout_constraintBottom_toTopOf="@+id/bottom_update_map_iv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bottom_update_widget_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/widget_title"
        android:textColor="@color/sub_color"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/bottom_update_widget_iv"
        app:layout_constraintTop_toTopOf="@+id/bottom_update_widget_iv" />

    <TextView
        android:id="@+id/bottom_update_widget_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/widget_text"
        android:textColor="@color/gray_color_696161"
        android:textSize="12sp"
        android:paddingHorizontal="15dp"
        app:layout_constraintStart_toEndOf="@+id/bottom_update_widget_iv"
        app:layout_constraintTop_toBottomOf="@+id/bottom_update_widget_tv" />

    <ImageView
        android:id="@+id/bottom_update_map_iv"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="45dp"
        android:src="@drawable/ic_color_map"
        app:layout_constraintBottom_toTopOf="@+id/bottom_update_not_see_cl"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bottom_update_map_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/map_title"
        android:textColor="@color/sub_color"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/bottom_update_map_iv"
        app:layout_constraintTop_toTopOf="@+id/bottom_update_map_iv" />

    <TextView
        android:id="@+id/bottom_update_map_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/map_text"
        android:textColor="@color/gray_color_696161"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/bottom_update_map_tv"
        app:layout_constraintTop_toBottomOf="@+id/bottom_update_map_tv" />

    <TextView
        android:id="@+id/bottom_update_not_see_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rect10_eaeaea"
        android:paddingVertical="12dp"
        android:text="@string/update_not_see"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
