<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textStyle="bold"
        tools:text="명진당" />

    <TextView
        android:id="@+id/tvFirstFoodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/home_food_stroke_category"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:text="@string/lunch_a_text"
        android:textColor="@color/sub_color"
        android:textSize="12dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirstFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:breakStrategy="high_quality"
        android:fontFamily="@font/notosans_regular"
        android:maxLines="3"
        android:textAlignment="center"
        android:textColor="#717171"
        android:textSize="12dp"
        tools:text="@string/food_list" />

    <TextView
        android:id="@+id/tvSecondFoodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/home_food_stroke_category"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:text="@string/lunch_b_text"
        android:textColor="@color/sub_color"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSecondFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:breakStrategy="high_quality"
        android:fontFamily="@font/notosans_regular"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:textAlignment="center"
        android:textColor="#717171"
        android:textSize="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_day_lunch_b"
        tools:text="@string/food_list" />

    <TextView
        android:id="@+id/tvThirdFoodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/home_food_stroke_category"
        android:fontFamily="@font/notosans_regular"
        android:includeFontPadding="false"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:text="@string/dinner_text"
        android:textColor="@color/sub_color"
        android:textFontWeight="500"
        android:textSize="12dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvThirdFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:breakStrategy="high_quality"
        android:fontFamily="@font/notosans_regular"
        android:maxLines="3"
        android:textAlignment="center"
        android:textColor="#717171"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_day_afternoon"
        tools:text="@string/food_list" />

    <TextView
        android:id="@+id/tvWeekendMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/weekend_not_service"/>
</LinearLayout>


