<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_custom">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1.4dp"
        android:background="@color/sub_color"
        app:layout_constraintBottom_toTopOf="@+id/btn_no" />

    <View
        android:id="@+id/view_2"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/sub_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/btn_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_regular"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/no_dialog_text"
        android:textColor="@color/sub_color"
        android:textFontWeight="700"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_no" />

    <TextView
        android:id="@+id/btn_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_regular"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/yes_dialog_text"
        android:textColor="@color/sub_color"
        android:textFontWeight="700"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_yes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="94dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/notosans_regular"
        android:gravity="center"
        android:text="@string/hello_dialog_text"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>