<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="11dp"
    android:background="@drawable/home_food_stroke"
    android:paddingTop="1dp">

    <TextView
        android:id="@+id/item_love_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/notosans_regular"
        android:text="@string/restaurant_name"
        android:textColor="#000000"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/item_love_ellipse_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/ic_restaurant_ellipse"
        app:layout_constraintBottom_toBottomOf="@id/item_love_name"
        app:layout_constraintLeft_toRightOf="@id/item_love_name"
        app:layout_constraintTop_toTopOf="@id/item_love_name" />

    <TextView
        android:id="@+id/item_love_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/restaurant_type"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/item_love_ellipse_iv"
        app:layout_constraintLeft_toRightOf="@id/item_love_ellipse_iv"
        app:layout_constraintTop_toTopOf="@id/item_love_ellipse_iv" />

    <TextView
        android:id="@+id/item_love_distance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:fontFamily="@font/notosans_regular"
        android:text="@string/restaurant_distance"
        android:textColor="@color/main_color"
        android:textFontWeight="700"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/item_love_object"
        app:layout_constraintLeft_toRightOf="@id/item_love_object"
        app:layout_constraintTop_toTopOf="@id/item_love_object" />

    <ImageView
        android:id="@+id/item_love_love_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingBottom="5dp"
        android:src="@drawable/ic_food_love"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/item_love_distance_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_love_distance_tv" />

    <ImageView
        android:id="@+id/item_love_love_fill_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingBottom="5dp"
        android:src="@drawable/ic_food_love_fill"
        app:layout_constraintBottom_toBottomOf="@id/item_love_distance_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_love_distance_tv" />

    <ImageView
        android:id="@+id/item_love_location_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="1dp"
        android:src="@drawable/ic_place"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_love_name" />

    <TextView
        android:id="@+id/item_love_location_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/restaurant_location"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/item_love_location_iv"
        app:layout_constraintLeft_toRightOf="@id/item_love_location_iv"
        app:layout_constraintTop_toTopOf="@id/item_love_location_iv" />

    <ImageView
        android:id="@+id/item_love_phone_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="3dp"
        android:src="@drawable/ic_phone"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_love_location_tv" />

    <TextView
        android:id="@+id/item_love_phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:text="@string/restaurant_phone"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/item_love_phone_iv"
        app:layout_constraintLeft_toRightOf="@id/item_love_phone_iv"
        app:layout_constraintTop_toTopOf="@id/item_love_phone_iv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_love_detail_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/week_food_layout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/item_love_phone_tv"
        app:layout_constraintEnd_toEndOf="@+id/item_love_love_fill_iv"
        app:layout_constraintTop_toTopOf="@+id/item_love_phone_tv">

        <TextView
            android:id="@+id/item_love_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="13dp"
            android:paddingTop="5dp"
            android:paddingEnd="22dp"
            android:paddingBottom="6dp"
            android:text="@string/direct_go"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/item_love_detail_iv_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_food_detail_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>






